# indooruav_dji_driver

./: .clangd  .gitignore  CMakeLists.txt  README.md  package.xml
config/: mavic_3t_config.yaml
doc/: doc_mavic_3t.drawio
include/dependences/: application.hpp  dji_sdk_app_info.h  dji_sdk_app_info_local.h.example  dji_sdk_config.h  hal_uart.h
include/indooruav_dji_driver/: mavic_3t_camera_controller.h  mavic_3t_data_subscription_manager.h  mavic_3t_flight_controller.h  mavic_3t_gimbal_controller.h
launch/: mavic_3t_driver.launch
node/: mavic_3t_driver.cpp  mavic_3t_driver_test.cpp
psdk_lib/include/: dji_gimbal_manager.h
src/dependences/: application.cpp
src/indooruav_dji_driver/: mavic_3t_camera_controller.cpp  mavic_3t_data_subscription_manager.cpp  mavic_3t_flight_controller.cpp  mavic_3t_gimbal_controller.cpp
srv/: PSDK_CameraShootPhoto.srv  PSDK_GimbalPitchAngleInDeg.srv  PSDK_Landing.srv  PSDK_TakeOff.srv
